# rjvm

./: Cargo.toml
reader/: Cargo.toml
reader/src/: attribute.rs  buffer.rs  class_access_flags.rs  class_file.rs  class_file_field.rs  class_file_method.rs  class_reader.rs  class_reader_error.rs  constant_pool.rs  exception_table.rs  field_flags.rs  field_type.rs  instruction.rs  lib.rs  line_number.rs  line_number_table.rs  method_descriptor.rs  method_flags.rs  program_counter.rs  type_conversion.rs
reader/tests/integration/: deprecated_class_test.rs  utils.rs
vm/: Cargo.toml
vm/src/: abstract_object.rs  call_frame.rs  call_stack.rs  class.rs  class_loader.rs  class_manager.rs  class_path.rs  class_path_entry.rs  file_system_class_path_entry.rs  gc.rs  io.rs  jar_file_class_path_entry.rs  java_objects_creation.rs  lib.rs  native_methods_impl.rs  native_methods_registry.rs  stack_trace_element.rs  time.rs  value.rs  value_stack.rs  vm.rs  vm_error.rs
