[package]
name = "rjvm_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.5.0", default-features = false }
strum_macros = "0.26.2"
log = "0.4.17"
itertools = { version = "0.13.0", default-features = false, features = [
    "use_alloc",
] }
cesu8 = { git = "https://github.com/mcountryman/cesu8-rs.git", version = "1.1.0", default-features = false }
snafu = { version = "0.8.2", default-features = false, features = [
    "unstable-core-error",
] }
